--- a/src/components/carte/Carte.css
+++ b/src/components/carte/Carte.css
@@ -7,30 +7,33 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  color:#f5e7dc;
-  padding:20px;
+  color: #f5e7dc;
+  padding: 20px;
 }
-.card__avatar{
-    border-radius: 50%;
-    height: 100px;
-    width: 100px;
-    animation: card-avatar-spin infinite 20s linear;
+.card__avatar {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  animation: card-avatar-spin infinite 20s linear;
+  object-fit: cover;
+  object-position: center center;
 }
-.card__body{
-    display:flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
+.card__body {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
-.card__body h1,.card__body div{
-    height:30px;
+.card__body h1,
+.card__body div {
+  height: 30px;
 }
 
 @keyframes card-avatar-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
   }
+  to {
+    transform: rotate(360deg);
+  }
+}
